--- a/index.html
+++ b/index.html
@@ -9,7 +9,12 @@
 </head>
 <body>
     <div id="container">
-        <h1 class="email" v-for="email , i in emails">{{email}}</h1>
+        <div v-if="emails.length == 10">
+            <h1>Lista email</h1>
+            <ul>
+                <li class="email" v-for="email , i in emails">{{email}}</li>
+            </ul>
+        </div>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/vue@2.6.14"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.20.0/axios.min.js"></script>
